Changes for Bug Fixes

--- a/src/app/pages/miscissue/create-misc-issue/create-misc-issue.component.html
+++ b/src/app/pages/miscissue/create-misc-issue/create-misc-issue.component.html
@@ -30,6 +30,7 @@
                         <option [value]="0">Select Issue Type</option>
                         <option [value]="1">Lot</option>
                         <option [value]="2">Purchase</option>
+                        <option [value]="3">Other</option>
                     </select>
                 </div>
             </div>
