--- a/src/app/pages/miscissue/misc-issue-list/misc-issue-list.component.html
+++ b/src/app/pages/miscissue/misc-issue-list/misc-issue-list.component.html
@@ -34,6 +34,7 @@
                 <option [value]="0">All Issue Type</option>
                 <option [value]="1">Lot</option>
                 <option [value]="2">Purchase</option>
+                <option [value]="3">Other</option>
             </select>
         </div>
         <div class="col-md-2 col-sm-12 no-padding-right" *ngIf="issueListTask.searchThrough == 2">
