--- a/src/app/pages/cutting/cutting-list/cutting-list.component.scss
+++ b/src/app/pages/cutting/cutting-list/cutting-list.component.scss
@@ -56,10 +56,13 @@ table.cutting-list-table thead th {
     width: 11%;
 }
 .issue-qty {
-    width: 12%
+    width: 10%
 }
 .status {
     width: 12%
+}
+.fitType {
+    width: 12%;
 }
 
 .custom-tooltip-ion:hover .customTooltiptext {
