--- a/src/app/pages/costing/create-costing/create-costing.component.html
+++ b/src/app/pages/costing/create-costing/create-costing.component.html
@@ -153,7 +153,7 @@
                                         </select>
                                     </td>
                                     <td class="textAlignCenter pt10">
-                                        <input class="form-control" type="checkbox" [(ngModel)]="item.IsDistressed" [disabled]="isViewOnly || item.CostingID"/>
+                                        <input class="form-control" type="checkbox" style="zoom: 0.5" [(ngModel)]="item.IsDistressed" [disabled]="isViewOnly || item.CostingID"/>
                                     </td>
                                     <td class="textAlignCenter pt4">
                                         <input class="form-control" type="text" [(ngModel)]="item.ProductCode" [disabled]="true"/>
