--- a/src/app/pages/orders/orders-list/orders-list.component.scss
+++ b/src/app/pages/orders/orders-list/orders-list.component.scss
@@ -28,8 +28,8 @@ input[type="radio"] {
     width: 70%;
 }
 .view-btn {
-    padding-top: 25px;
-    padding-left: 25px;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 .createTicketBtn {
     padding: 10px 35px;
@@ -93,50 +93,9 @@ table.notification-list-table thead th {
 .type {
     width: 9%
 }
-.custom-tooltip-ion:hover .customTooltiptext {
-    visibility: visible;
+.filter-width {
+    width: 13%;
+    padding-left: 5px;
+    margin-right: 10px;
 }
-  
-.customTooltiptext {
-    z-index: 999;
-    visibility: hidden;
-    background-color: #333;
-    color: #fff;
-    width: auto;
-    text-align: center;
-    border-radius: 6px;
-    position: relative;
-    padding: 2px 5px;
-    line-height: 15px;
-    font-size: 12px;
-}
-  
-@media only screen and (min-width: 769px) {
-    .tooltip-position {
-        position: absolute;
-        width: 64px !important;
-        margin-left: 10px;
-    }
-}
-@media only screen and (max-width: 768px) {
-    .tooltip-position {
-        position: relative;
-    }
-}
-.driver-spinner {
-    position: absolute;
-    top: 27px;
-    z-index: 999;
-    right: 13px;
-}
-.cursorPointer {
-    cursor: pointer;
-}
-.no-padding-right {
-    padding-right: 0px !important;
-}
-@media only screen and (min-width: 769px) {
-    .filter-max-width {
-        max-width: 14.2% !important;
-    }
-}
+
