--- a/src/app/pages/orders/orders-list/orders-list.component.html
+++ b/src/app/pages/orders/orders-list/orders-list.component.html
@@ -2,7 +2,7 @@
   <div style="margin:auto;position:fixed;top:50%;left:50%;">
       <img src="assets/crm/spinner.gif " width='25px'>
   </div>
-</div>
+</div>8
 
 <ba-card cardTitle="ORDERS" class="smart-table-container" #orders>
     <div class="row">
@@ -35,13 +35,6 @@
                 <option [value]="1">All Type</option>
                 <option [value]="2">Lead</option>
                 <option [value]="3">Customer</option>
-            </select>
-        </div>
-        <div class="filter-width no-padding-right" *ngIf="orderTask.searchorderby == 2">
-            <label>Vendor</label>
-            <select class="form-control" (change)="refreshDataHandler()" [(ngModel)]="orderTask.VendorID">
-                <option [value]="1">All Vendors</option>
-                <option *ngFor='let vendor of allVendors' [value]="vendor.VendorID">{{vendor.Vendor}}</option>
             </select>
         </div>
         <div class="filter-width no-padding-right" *ngIf="orderTask.searchorderby == 2">
